--- a/static/css/neo.css
+++ b/static/css/neo.css
@@ -95,8 +95,8 @@ background-color: inherit; }
 }
 
 #avatar {
-		width: 128px;
-		height: 128px;
+		max-width: 128px;
+		max-height: 128px;
 }
 
 #header {
@@ -249,20 +249,14 @@ background-color: inherit; }
   margin: 0px;
 }
 
-.imglink-container {
-		padding: 0px;
-		height: 32px;
+.sidebar .imglink-container {
+		padding: 5px;
+		/* height: 32px; */
 }
 
 .btn-editable-imglink .imglink-img {
-		max-width: 32px;
-		height: 32px;
-		padding: 3px;
-}
-
-.btn-imglink .imglink-img {
-		width: 32px;
-		height: 32px;
+		max-width: 45px;
+		max-height: 45px;
 		padding: 3px;
 }
 
@@ -281,12 +275,19 @@ background-color: inherit; }
 }
 
 .sidebar .btn-imglink {
-		width: 100%;
-		height: 100%;
+		max-width: 64px;
+		max-height: 64px;
 		padding: 0px;
 		margin: 0px;
 		box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.5), 0px 0px 0px 0px rgba(0, 0, 0, 0.5)
 }
+
+.btn-imglink .imglink-img {
+		/* width: 32px; */
+		/* height: 32px; */
+		/* padding: 3px; */
+}
+
 
 .sidebar img {
 		box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.5), 0px 0px 0px 0px rgba(0, 0, 0, 0.5)
@@ -296,13 +297,6 @@ background-color: inherit; }
 #left-sidebar-tabs {
 	padding-left: 10px;
 	overflow: ellipsis;
-}
-
-.truncate {
-  white-space: nowrap;
-	width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .gallery-links img {
