copy files to dropbox on create now; lock ui on profile create/save/discard

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -47,7 +47,7 @@ About
               <h4 class="list-group-item-heading">refurence's will NOT do the following:</h4>
               <p class="list-group-item-text">
               - store your password.  refurence forces users to login with their credentials through Dropbox; this means refurence will never see your password</br>
-              - share your data.  not like its very useful anyway :p</br>
+              - share your data</br>
               - show ads or make any money of any kind.</br>
               </p>
           </li>
@@ -57,8 +57,10 @@ About
               - refurence uses Dropbox for ease of hosting and sharing images for public viewing</br>
               - refurence does NOT have access to anything other than files in the folder it creates in your Dropbox</br>
               - this folder is created as "/Apps/refurence"</br>
-              - using Dropbox gives the user more control over which images are hosted and how</br>
-              - using Dropbox simplifies the process of authenticating users</br>
+              - using Dropbox gives you more control over which images are hosted and how</br>
+              - using Dropbox means your images are hosted by a company who's service probably wont be going down anytime soon</br>
+              - WARNING: do not only store your images here, refurence isnt liable for any lost images</br>
+              - using Dropbox simplifies the process of logging in</br>
               </p>
           </li>
       </ul>
