--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -325,6 +325,6 @@ $(function() {
 });
 </script>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script> 
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.js"></script> 
 <script type="text/javascript" src={{url_for('static', filename="js/neo_edit.js") }}></script>
 {% endblock %}
