--- a/templates/profiles/_neo.html
+++ b/templates/profiles/_neo.html
@@ -256,7 +256,7 @@ $(function() {
 										{% if description.get_tables()[i].get_image_links()[0] %}
 										<img class="img-description img-description-edit img-responsive centered" src="{{description.get_tables()[i].get_image_links()[0]}}">
 										{% else %}
-										<img class="img-description img-description-edit img-responsive centered" src="{{url_for('static', filename='img/bkg.jpg')}}">
+										<img class="img-description img-description-edit img-responsive centered" src="{{url_for('static', filename='img/nothing.jpg')}}">
 										{% endif %}
 								</div>
 
