--- a/templates/users/controlpanel.html
+++ b/templates/users/controlpanel.html
@@ -16,7 +16,7 @@ refurence
 <div class="container">
   <div class="row">
     {%- block maincontainer -%}
-    <div class="col-xs-12 content-box" id="maincontainer">
+    <div class="col-xs-12 content-box-2" id="maincontainer">
 
       <div class="col-xs-12" id="error-msg"></div>
 
