--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@ refurence
 {% block styles %}
     {{super()}}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+		<link href='https://fonts.googleapis.com/css?family=Orbitron:400,700' rel='stylesheet' type='text/css'>
 {% endblock %}
 
 
