better about page

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -8,9 +8,11 @@ About
 
   <div class="jumbotron content-box" style="padding:40px;">
       <h2 class="text-center">About</h2>
-      <p><strong>Refurence</strong> is a useful tool for storing and showing images+text references to help artists make art</p>
-      <p>it can be a hassle for an artist and client to easily communicate what they </p>
-      <p><strong>Email:</strong> edeadbeat@gmail.com for any issues, questions, or comments</p>
+      <p><strong>Refurence</strong> is a tool for displaying visual and written references to help artists make commissioned art</p></br>
+			<p>create a refurence to:</p></br>
+			<p>* describe a fantasy character and their backstory</p></br>
+			<p>* cool fursona</p></br>
+      <p>* better explain a specific concept or theme</p>
   </div>
 
   <div class="col-xs-12 content-box">
@@ -48,7 +50,7 @@ About
               <p class="list-group-item-text">
               - store your password.  refurence forces users to login with their credentials through Dropbox; this means refurence will never see your password</br>
               - share your data</br>
-              - show ads or make any money of any kind.</br>
+              - show ads or make money</br>
               </p>
           </li>
           <li class="list-group-item">
@@ -61,6 +63,11 @@ About
               - using Dropbox means your images are hosted by a company who's service probably wont be going down anytime soon</br>
               - WARNING: do not only store your images here, refurence isnt liable for any lost images</br>
               - using Dropbox simplifies the process of logging in</br>
+              </p>
+          </li>
+          <li class="list-group-item">
+              <h4 class="list-group-item-heading">open source</h4>
+              <p class="list-group-item-text"> All code is public and can be seen <a href="https://github.com/dbdeadbeat/refurence">HERE ON GITHUB</a>
               </p>
           </li>
       </ul>
