--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -62,7 +62,7 @@
                     {{ neo.render_avatarimg(profile.header) }}
                     </div>
                   <span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
-                  <em> Drop file to change Avatar</em>
+                  <em> Click or Drop file to change Avatar</em>
                 </div>
 						</div>
 
