--- a/templates/users/_macros.html
+++ b/templates/users/_macros.html
@@ -37,7 +37,7 @@
             <button class="btn btn-danger" type="button"
 								onclick="
 									$.blockUI({ 
-											message: '<h1>deleting...</h1>',
+											message: '<h1>im dead...</h1>',
 											css: { 
 													border: 'none', 
 													padding: '15px', 
