--- a/templates/users/controlpanel.html
+++ b/templates/users/controlpanel.html
@@ -67,7 +67,7 @@ refurence
 					$('button#btn-create-refurence').on('click', function() {
 
 							$.blockUI({ 
-									message: '<h1>creating your refurence...</h1>',
+									message: '<h1>im alive...</h1>',
 									css: { 
 											border: 'none', 
 											padding: '15px', 
