--- a/templates/profiles/_neo.html
+++ b/templates/profiles/_neo.html
@@ -261,7 +261,7 @@ $(function() {
 								</div>
 
 								<span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
-								<em> Drop file to add image to Note</em>
+								<em> Click or Drop file to add image to Note</em>
 						</div>
 				</div>
 		</div>
