--- a/templates/profiles/neo.html
+++ b/templates/profiles/neo.html
@@ -95,7 +95,7 @@
 								<div id="edit-profile-buttons" class="col-xs-12">
 										<a class="btn btn-dark btn-lg btn-sidebar pull-right" type="button" href="{{ url_for('profiles.edit', slug=profile.username) }}">
 												<span class="glyphicon glyphicon-edit" aria=hidden="true"></span>
-												Edit Profile
+												Edit
 										</a>
 								</div>
 								{% endif %}
