--- a/templates/profiles/neo.html
+++ b/templates/profiles/neo.html
@@ -107,8 +107,10 @@
 										</div>
 								</div>
 
+								{% if profile.description.tables.keys()|length > 0 %}
 								<div class="col-xs-12 hr fill-low-opacity"></div>
 								<div class="col-xs-12 hr"></div>
+								{% endif %}
 
 								<div class="row">
 										{% for i in range(0, profile.description.tables.keys()|length) %}
@@ -127,9 +129,13 @@
 										</div>
 										{% endfor %}
 								</div>
+
+								{% if profile.description.tables.keys()|length > 0 %}
 								<div class="row">
 										<div class="col-xs-12 hr fill-low-opacity"></div>
 								</div>
+								{% endif %}
+
 								<div class="row">
 										<div class="col-xs-12">
 												{% for gallery in profile.get_galleries() %}
