dark content box for example

--- a/templates/profiles/list.html
+++ b/templates/profiles/list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
 
-    <div class="col-sm-8 col-sm-offset-2 content-box">
+    <div class="col-sm-8 col-sm-offset-2 content-box-2">
 
         <h1 class="text-center">{{ title }}</h1>
 
