updated for DBox changed html; tweaked gallery nav style

--- a/static/css/neo.css
+++ b/static/css/neo.css
@@ -305,6 +305,10 @@ background-color: inherit; }
   margin: 3px;
   overflow: hidden; }
 
+a.gallery-nav {
+		color: lightblue;
+}
+
 #btn_sidebar_add_link {
 	margin-bottom: 10px;
 }
